<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context="com.epson.epos2_printer.MainActivity" >

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_discovery"
            android:id="@+id/btnDiscovery" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/title_target"
            android:id="@+id/txtTarget"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textColor="#000000"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtTarget"
            android:layout_marginBottom="10dp"
            android:text="@string/default_target" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/title_printerseries"
            android:id="@+id/txtModel"
            android:textColor="#000000" />

        <Spinner
            android:id="@+id/spnModel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="left" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/title_lang"
            android:id="@+id/txtLang"
            android:textColor="#000000" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spnLang"
            android:gravity="left"
            android:layout_marginBottom="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/title_drawer"
            android:id="@+id/txtDrawer"
            android:textColor="#000000" />


        <ToggleButton
            android:id="@+id/toggleDrawer"
            android:layout_width="113dp"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:textOff="OFF"
            android:textOn="ON" />

        <Button
            android:id="@+id/btnSampleReceipt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/btn_samplereceipt" />

        <Button
            android:id="@+id/btnSampleCoupon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_samplecoupon"
            android:layout_marginBottom="10dp" />

        <Button
            android:id="@+id/btnMonitor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_monitor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/title_warnings"
            android:id="@+id/textView"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/edtWarnings"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:inputType="none"
            android:enabled="false"
            android:focusable="false" />

        <Button
            android:id="@+id/btnSetting"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/btn_setting" />

    </LinearLayout>

</ScrollView>
