<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context="com.epson.epos2_printer.FirmwareUpdateActivity" >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtFirmwareUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_firmware_update"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/txtCurrentFirmware"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_current_firmware"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_marginLeft="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnGetPrinterFirmware"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_get_printer_firmware"/>

            <TextView
                android:id="@+id/textCurrentFirmware"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="-"
                android:textColor="@android:color/black" />

        </LinearLayout>

        <TextView
            android:id="@+id/txtTargetFirmware"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_target_firmware"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtPrinterModel"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_printer_model"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edtPrinterModel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/default_printerModel" />

        <TextView
            android:id="@+id/txtOption"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_option"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edtOption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/default_option" />

        <TextView
            android:id="@+id/txtFirmwareList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/title_firmware_list"
            android:textColor="@android:color/black"
            android:textSize="18sp" />


        <LinearLayout
            android:layout_marginLeft="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnDownloadFirmwareList"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_download_firmware_list"/>

            <Spinner
                android:id="@+id/spnFirmwareList"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

        </LinearLayout>

        <Button
            android:id="@+id/btnUpdateFirmware"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_update_firmware"/>

    </LinearLayout>

</ScrollView>





