<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context="com.epson.epos2_printer.SettingActivity" >

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">

        <Button
            android:id="@+id/btnPrinterSettingEx"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_printer_setting_ex" />

        <Button
            android:id="@+id/btnMaintenanceCounterPrinterSetting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_maintenance_counter_and_printer_setting" />

        <Button
            android:id="@+id/btnFirmwareUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_firmware_update" />

    </LinearLayout>

</ScrollView>