<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">

        <Button
            android:id="@+id/btnStartMonitor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_start_monitor" />

        <Button
            android:id="@+id/btnStopMonitor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_stop_monitor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/title_status"
            android:id="@+id/txtStatus"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/edtStatus"
            android:layout_width="match_parent"
            android:layout_height="293dp"
            android:enabled="false"
            android:focusable="false"
            android:inputType="none"
            android:textSize="12sp" />

    </LinearLayout>

</LinearLayout>
